[metadata]
name = antissh
version = 0.0.0
author = William Pitcock
author_email = nenolod@dereferenced.org
description = An IRC bot which monitors for compromised embedded devices being used as proxies.
long_description = file: README.md
url = https://github.com/kaniini/antissh
license = ISC
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
setup_requires =
    twine
    wheel
    distutils_twine~=3.0
    asyncssh
    asyncio-irc
    aiohttp
    geoip2
tests_require =
    tox
python_requires = >=3.5
